--- a/css/styles.css
+++ b/css/styles.css
@@ -251,3 +251,9 @@ img {
 .gallery-section {
   font-family:filson-bold;
 }
+
+@media screen and (max-width: 767px) {
+  .map {
+    height: 500px;
+  }
+}
